--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,9 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'Auto Release Draft'
+description: 'Cria um release com as alterações'
+author: 'Alvaro Camillo Neto'
+outputs:
+  release-url:              # change this
+    description: 'A Url do documento gerado'
 runs:
   using: 'node12'
   main: 'dist/index.js'
