--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: Test
+name: Build
 on:
   push:
     branches:
       -master
 jobs:
-  test:
-    name: Test
+  build:
+    name: Build and Test
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
@@ -13,8 +13,7 @@ jobs:
     steps:
       - name: Baixa os arquivos fonte
         uses: actions/checkout@v1
-      - name: Executa a action
-        id: create-release-draft
-        uses: ./
-      - name: Imprime a URL
-        run: echo ${{steps.create-release-draft.outputs.release-url}}
+      - name: Instala as dependências
+        run: npm ci
+      - name: Build
+        run: npm run all
